Add initial devices.json, update .gitignore, modify eas.json for production and simulator, enhance stats page with navigation, update app.json for icon changes, add README.md for .expo folder, update package.json dependencies

--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "Usider",
     "version": "0.0.1",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.jpg",
+    "icon": "./assets/images/icon.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "splash": {
@@ -17,12 +17,14 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/icon.jpg",
+        "foregroundImage": "./assets/images/iconan.png",
         "backgroundColor": "#000000"
-      }
+      },
+      "package": "com.ak.usider"
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      "expo-font"
     ],
     "experiments": {
       "typedRoutes": true
