Rename app to "Usider" and update stats page message for clarity

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "Usider:lofi-timer",
+    "name": "Usider",
     "slug": "Usider",
     "version": "0.0.1",
     "orientation": "portrait",
