--- a/app.json
+++ b/app.json
@@ -15,7 +15,7 @@
     },
     "ios": {
       "supportsTablet": false,
-      "bundleIdentifier": "com.ak.usider"
+      "bundleIdentifier": "com.hackclub.usider"
     },
     "android": {
       "adaptiveIcon": {
