--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "expo-linking": "~7.0.3",
     "expo-router": "~4.0.14",
     "expo-splash-screen": "~0.29.18",
+    "expo-sqlite": "~15.0.4",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.6",
     "expo-web-browser": "~14.0.1",
@@ -46,12 +47,12 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-svg": "15.8.0",
+    "react-native-toast-message": "^2.2.1",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "react-native-wheel-color-picker": "^1.3.1",
-    "undefined": "react-native-community/react-native-slider",
-    "expo-sqlite": "~15.0.4"
+    "undefined": "react-native-community/react-native-slider"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
