Enhance timer functionality with Appwrite integration, add logout button, and improve stats display

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@expo-google-fonts/poppins": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-cookies/cookies": "^6.2.1",
     "@react-navigation/native": "^7.0.0",
     "axios": "^1.7.4",
     "expo": "^52.0.21",
@@ -39,6 +40,8 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
     "react-native-appwrite": "^0.5.0",
+    "react-native-appwrite-oauth": "^0.3.4",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-color-picker": "^0.6.0",
     "react-native-flip-timer": "^0.0.5",
     "react-native-flip-timer-fixed": "^1.0.33",
