--- a/package.json
+++ b/package.json
@@ -41,11 +41,13 @@
     "react-native": "0.76.5",
     "react-native-appwrite": "^0.5.0",
     "react-native-appwrite-oauth": "^0.3.4",
+    "react-native-background-timer": "^2.4.1",
     "react-native-chart-kit": "^6.12.0",
     "react-native-color-picker": "^0.6.0",
     "react-native-flip-timer": "^0.0.5",
     "react-native-flip-timer-fixed": "^1.0.33",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
