--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@expo-google-fonts/poppins": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/netinfo": "11.4.1",
     "@react-native-cookies/cookies": "^6.2.1",
     "@react-navigation/native": "^7.0.0",
     "axios": "^1.7.4",
     "expo": "^52.0.21",
     "expo-av": "~15.0.1",
+    "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
     "expo-dev-client": "~5.0.6",
     "expo-font": "~13.0.2",
@@ -41,13 +43,12 @@
     "react-native": "0.76.5",
     "react-native-appwrite": "^0.5.0",
     "react-native-appwrite-oauth": "^0.3.4",
-    "react-native-background-timer": "^2.4.1",
+    "react-native-background-fetch": "^4.2.7",
     "react-native-chart-kit": "^6.12.0",
     "react-native-color-picker": "^0.6.0",
     "react-native-flip-timer": "^0.0.5",
     "react-native-flip-timer-fixed": "^1.0.33",
     "react-native-gesture-handler": "~2.20.2",
-    "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
@@ -63,8 +64,6 @@
     "@babel/core": "^7.20.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
-    "@types/react-native-background-timer": "^2.0.2",
-    "@types/react-native-push-notification": "^8.1.4",
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.2",
