--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-native-flip-timer": "^0.0.5",
     "react-native-flip-timer-fixed": "^1.0.33",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-onboarding-swiper": "^1.3.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
@@ -64,6 +65,7 @@
     "@babel/core": "^7.20.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
+    "@types/react-native-onboarding-swiper": "^1.1.9",
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.2",
