--- a/package.json
+++ b/package.json
@@ -31,16 +31,19 @@
     "expo-font": "~13.0.2",
     "expo-linear-gradient": "~14.0.1",
     "expo-linking": "~7.0.3",
+    "expo-notifications": "~0.29.11",
     "expo-router": "~4.0.14",
     "expo-splash-screen": "~0.29.18",
     "expo-sqlite": "~15.0.4",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.6",
     "expo-web-browser": "~14.0.1",
+    "lottie-react-native": "7.1.0",
     "moment": "^2.30.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
+    "react-native-android-widget": "^0.15.1",
     "react-native-appwrite": "^0.5.0",
     "react-native-appwrite-oauth": "^0.3.4",
     "react-native-background-fetch": "^4.2.7",
@@ -59,8 +62,7 @@
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "react-native-wheel-color-picker": "^1.3.1",
-    "undefined": "react-native-community/react-native-slider",
-    "lottie-react-native": "7.1.0"
+    "undefined": "react-native-community/react-native-slider"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
