cleanup of code, change some config, and make some changes to make it proper for release version

--- a/app.json
+++ b/app.json
@@ -15,7 +15,7 @@
     },
     "ios": {
       "supportsTablet": false,
-      "bundleIdentifier": "com.hackclub.usider"
+      "bundleIdentifier": "com.ak.usider"
     },
     "plugins": [
       "expo-router",
